# qdata-transformer

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: FINAL_REPORT.md  PROJECT_SUMMARY.md  REVIEW_REPORT.md  code_quality_analysis.md  conf.py  feature_extensions.md  index.md  performance_analysis.md  refactoring_optimization.md  requirements.txt
docs/qdatav2/: README.md  qdata-transformer.md  transformation-tech-evaluation.md
examples/: advanced_usage.py  basic_usage.py
src/qdata_transformer/: __init__.py  base.py  exceptions.py  py.typed  registry.py
src/qdata_transformer/transformers/: __init__.py  advanced.py  aggregation.py  column_ops.py  filter.py  mapping.py  multi_mapping.py  split.py
src/qdata_transformer/utils/: __init__.py
tests/: __init__.py  conftest.py  test_advanced.py  test_aggregation.py  test_chain.py  test_column_ops.py  test_filter.py  test_mapping.py  test_multi_mapping.py  test_performance.py  test_registry.py  test_split.py
